Fix data anggota 2 collapse
ku ganti dari datatoggle bootsrap jadi jquery hide show

--- a/assets/custom/css/style.css
+++ b/assets/custom/css/style.css
@@ -79,7 +79,7 @@ nav.black{
 .logo-nav{
 	width: 50px;
 	min-height: 50px;
-	background: url('../../../public/images/logo-itfest-white-edit.png') no-repeat;
+	/*background: url('../../../public/images/logo-itfest-white-edit.png') no-repeat;*/
 	background-size: cover;
 	background-position: center;
 	transition-duration: 1.5s;
